# rcore-utils

./: Cargo.toml  README.md  links.txt
rcat/: Cargo.toml
rwc/: Cargo.toml
rwc/src/: main.rs
rwc/src/wc/: mod.rs  test_file_1.txt
rwc/src/wc/test_files/: fire_and_ice.txt  frankenstein.txt  so_tired_blues.txt  trees.txt
rwc/tests/: test_utils.rs  wc_bytes.rs  wc_chars.rs  wc_combo.rs  wc_error.rs  wc_lines.rs  wc_no_args.rs  wc_tests.rs  wc_words.rs
rwc/tests/test_files/: README.txt  bummer_dude.txt  dracula.txt  fire_and_ice.txt  jack.txt  one_char.txt
shared/src/: lib.rs
