[package]
name = "wc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#shared = { path = "../shared" }
clap = { version = "3.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
